fix letter spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -304,7 +304,7 @@ body {
   font-size: 14px;
   font-weight: 300;
   line-height: 1.5rem;
-  letter-spacing: 0.0063rem;
+  letter-spacing: 0.0050rem;
 }
 
 /*?  Portfolio   */
